--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,21 +1,51 @@
 services:
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - certs:/etc/nginx/certs:ro
+      - vhost:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - nginx_conf:/etc/nginx/conf.d
+    environment:
+      - DEFAULT_HOST=${DOMAIN}
+      - TRUST_DOWNSTREAM_PROXY=false
+      - ENABLE_IPV6=true
+    networks:
+      - openmrs-network
+
+  acme-companion:
+    image: nginxproxy/acme-companion
+    container_name: nginx-proxy-acme
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - certs:/etc/nginx/certs:rw
+      - vhost:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
+      - acme:/etc/acme.sh
+    environment:
+      - DEFAULT_EMAIL=${SSL_EMAIL}
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+    depends_on:
+      - nginx-proxy
+    networks:
+      - openmrs-network
+
   gateway:
     image: thevo/lafia-openmrs-gateway:dev
     platform: linux/amd64
-    restart: "unless-stopped"
+    restart: unless-stopped
     depends_on:
       frontend:
         condition: service_healthy
       backend:
         condition: service_started
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    ports:
-      - "${HTTP_PORT:-80}:80"
     environment:
       - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_PORT=80
@@ -29,11 +59,21 @@ services:
       - CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,OPTIONS
       - CORS_ALLOW_HEADERS=Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN
       - CORS_ALLOW_CREDENTIALS=true
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - openmrs-network
+    expose:
+      - "80"
 
   frontend:
     image: thevo/lafia-openmrs-frontend:dev
     platform: linux/amd64
-    restart: "unless-stopped"
+    restart: unless-stopped
     environment:
       - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_PORT=80
@@ -46,18 +86,20 @@ services:
       - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
       - SPA_DEFAULT_LOCALE=
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/"]
+      test: ["CMD", "curl", "-f", "http://localhost/ || exit 0"]
       timeout: 5s
       interval: 10s
       retries: 3
       start_period: 20s
-    depends_on:
-      - backend
+    networks:
+      - openmrs-network
+    expose:
+      - "80"
 
   backend:
     image: ${ECR_REPOSITORY:-571600871041.dkr.ecr.eu-west-2.amazonaws.com}/lafiaopenmrs-core-backend:latest
     platform: linux/amd64
-    restart: "unless-stopped"
+    restart: unless-stopped
     environment:
       - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_PORT=8080
@@ -85,8 +127,27 @@ services:
       interval: 30s
       retries: 5
       start_period: 60s
+    networks:
+      - openmrs-network
+    expose:
+      - "8080"
     volumes:
       - openmrs-data:/openmrs/data
 
+networks:
+  openmrs-network:
+    name: openmrs_network
+    driver: bridge
+
 volumes:
   openmrs-data: ~
+  certs:
+    name: openmrs_certs
+  vhost:
+    name: openmrs_vhost
+  html:
+    name: openmrs_html
+  acme:
+    name: openmrs_acme
+  nginx_conf:
+    name: openmrs_nginx_conf
