--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - html:/usr/share/nginx/html
       - nginx_conf:/etc/nginx/conf.d
     environment:
-      - DEFAULT_HOST=${DOMAIN}
+      - DEFAULT_HOST=${HMS_DEV_DOMAIN_NAME}
       - TRUST_DOWNSTREAM_PROXY=false
       - ENABLE_IPV6=true
     networks:
@@ -47,10 +47,10 @@ services:
       backend:
         condition: service_started
     environment:
-      - VIRTUAL_HOST=${DOMAIN}
+      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
       - LETSENCRYPT_EMAIL=${SSL_EMAIL}
       - PROXY_READ_TIMEOUT=300
       - PROXY_CONNECT_TIMEOUT=300
@@ -75,10 +75,10 @@ services:
     platform: linux/amd64
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=${DOMAIN}
+      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
       - LETSENCRYPT_EMAIL=${SSL_EMAIL}
       - SPA_PATH=/openmrs/spa
       - API_URL=/openmrs
@@ -101,10 +101,10 @@ services:
     platform: linux/amd64
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=${DOMAIN}
+      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
       - VIRTUAL_PORT=8080
       - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
       - LETSENCRYPT_EMAIL=${SSL_EMAIL}
       - OMRS_CONFIG_MODULE_WEB_ADMIN=true
       - OMRS_CONFIG_AUTO_UPDATE_DATABASE=true
