--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - html:/usr/share/nginx/html
       - acme:/etc/acme.sh
     environment:
-      - DEFAULT_EMAIL=${SSL_EMAIL}
+      - DEFAULT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - NGINX_PROXY_CONTAINER=nginx-proxy
     depends_on:
       - nginx-proxy
@@ -51,7 +51,7 @@ services:
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
       - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${SSL_EMAIL}
+      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - PROXY_READ_TIMEOUT=300
       - PROXY_CONNECT_TIMEOUT=300
       - PROXY_ADD_CORS_HEADERS=true
@@ -79,18 +79,18 @@ services:
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
       - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${SSL_EMAIL}
+      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - SPA_PATH=/openmrs/spa
       - API_URL=/openmrs
       - PUBLIC_URL=/openmrs/spa
       - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
       - SPA_DEFAULT_LOCALE=
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/ || exit 0"]
-      timeout: 5s
-      interval: 10s
+      test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 0
+      interval: 30s
+      timeout: 10s
       retries: 3
-      start_period: 20s
+      start_period: 40s
     networks:
       - openmrs-network
     expose:
@@ -105,7 +105,7 @@ services:
       - VIRTUAL_PORT=8080
       - VIRTUAL_PROTO=http
       - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${SSL_EMAIL}
+      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - OMRS_CONFIG_MODULE_WEB_ADMIN=true
       - OMRS_CONFIG_AUTO_UPDATE_DATABASE=true
       - OMRS_CONFIG_CREATE_TABLES=true
