--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -69,6 +69,8 @@ services:
       - openmrs-network
     expose:
       - "80"
+    volumes:
+      - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
 
   frontend:
     image: thevo/lafia-openmrs-frontend:dev
@@ -95,7 +97,10 @@ services:
       - openmrs-network
     expose:
       - "80"
-
+    volumes:
+      - frontend_dist:/usr/share/nginx/html
+      - ./config/nginx/frontend.conf:/etc/nginx/conf.d/default.conf
+      
   backend:
     image: ${ECR_REPOSITORY:-571600871041.dkr.ecr.eu-west-2.amazonaws.com}/lafiaopenmrs-core-backend:latest
     platform: linux/amd64
