--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -73,34 +73,34 @@ services:
       - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
 
   frontend:
-    image: thevo/lafia-openmrs-frontend:dev
-    platform: linux/amd64
-    restart: unless-stopped
-    environment:
-      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
-      - VIRTUAL_PORT=80
-      - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
-      - SPA_PATH=/openmrs/spa
-      - API_URL=/openmrs
-      - PUBLIC_URL=/openmrs/spa
-      - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
-      - SPA_DEFAULT_LOCALE=
-    healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 0
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    networks:
-      - openmrs-network
-    expose:
-      - "80"
-    volumes:
-      - frontend_dist:/usr/share/nginx/html
-      - ./config/nginx/frontend.conf:/etc/nginx/conf.d/default.conf
-      
+      image: thevo/lafia-openmrs-frontend:dev
+      platform: linux/amd64
+      restart: unless-stopped
+      environment:
+        - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
+        - VIRTUAL_PORT=80
+        - VIRTUAL_PROTO=http
+        - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
+        - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
+        - SPA_PATH=/openmrs/spa
+        - API_URL=/openmrs
+        - PUBLIC_URL=/openmrs/spa
+        - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
+        - SPA_DEFAULT_LOCALE=
+      healthcheck:
+        test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 0
+        interval: 30s
+        timeout: 10s
+        retries: 3
+        start_period: 40s
+      networks:
+        - openmrs-network
+      expose:
+        - "80"
+      volumes:
+        - frontend-dist:/usr/share/nginx/html
+        - ./config/nginx/frontend.conf:/etc/nginx/conf.d/default.conf
+
   backend:
     image: ${ECR_REPOSITORY:-571600871041.dkr.ecr.eu-west-2.amazonaws.com}/lafiaopenmrs-core-backend:latest
     platform: linux/amd64
@@ -156,3 +156,5 @@ volumes:
     name: openmrs_acme
   nginx_conf:
     name: openmrs_nginx_conf
+  frontend-dist:  
+    name: openmrs_frontend_dist
