--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
 
   frontend:
-      image: thevo/lafia-openmrs-frontend:dev
+      image: thevo/lafia-openmrs-frontend:alpha-dev
       platform: linux/amd64
       restart: unless-stopped
       environment:
@@ -119,14 +119,16 @@ services:
       - OMRS_CONFIG_CONNECTION_PASSWORD=${HMS_DEV_DB_PASSWORD}
       - OMRS_CONFIG_CONNECTION_PORT=5432
       - OMRS_DB_DRIVER_CLASS=org.postgresql.Driver
-      - OMRS_CONFIG_CONNECTION_URL=jdbc:postgresql://${HMS_DEV_DB_HOST}/${HMS_DEV_DB_NAME}
+      - OMRS_CONFIG_CONNECTION_URL=jdbc:postgresql://${HMS_DEV_DB_HOST}:5432/${HMS_DEV_DB_NAME}
+      - OMRS_CONFIG_DATABASE_SCHEMA=public
+      - OMRS_CONFIG_PROPERTIES_hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
       - CORS_ALLOWED_ORIGINS=*
       - CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
       - CORS_ALLOWED_HEADERS=Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN,Cache-Control,Access-Control-Allow-Headers
       - CORS_ALLOW_CREDENTIALS=true
       - CORS_MAX_AGE=3600
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/openmrs"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/openmrs || exit 0"]
       timeout: 10s
       interval: 30s
       retries: 5
