--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,26 @@
 services:
+ 
   nginx-proxy:
-    image: nginxproxy/nginx-proxy
-    container_name: nginx-proxy
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs:ro
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - nginx_conf:/etc/nginx/conf.d
-    environment:
-      - DEFAULT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - TRUST_DOWNSTREAM_PROXY=false
-      - ENABLE_IPV6=true
-    networks:
-      - openmrs-network
-
+      image: nginxproxy/nginx-proxy
+      container_name: nginx-proxy
+      restart: unless-stopped
+      ports:
+        - "80:80"
+        - "443:443"
+      volumes:
+        - /var/run/docker.sock:/tmp/docker.sock:ro
+        - certs:/etc/nginx/certs:ro
+        - vhost:/etc/nginx/vhost.d
+        - html:/usr/share/nginx/html
+        - nginx_conf:/etc/nginx/conf.d
+      environment:
+        - DEFAULT_HOST=${HMS_DEV_DOMAIN_NAME}
+        - TRUST_DOWNSTREAM_PROXY=false
+        - ENABLE_IPV6=true
+        - VIRTUAL_PORT=80
+        - VIRTUAL_PROTO=http
+      networks:
+        - openmrs-network
   acme-companion:
     image: nginxproxy/acme-companion
     container_name: nginx-proxy-acme
@@ -42,6 +44,10 @@ services:
     platform: linux/amd64
     restart: unless-stopped
     depends_on:
+      nginx-proxy:
+        condition: service_started
+      acme-companion:
+        condition: service_started
       frontend:
         condition: service_healthy
       backend:
@@ -55,10 +61,8 @@ services:
       - PROXY_READ_TIMEOUT=300
       - PROXY_CONNECT_TIMEOUT=300
       - PROXY_ADD_CORS_HEADERS=true
-      - CORS_ALLOW_ORIGIN=*
-      - CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,OPTIONS
-      - CORS_ALLOW_HEADERS=Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN
-      - CORS_ALLOW_CREDENTIALS=true
+    volumes:
+      - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
     healthcheck:
       test: ["CMD", "nginx", "-t"]
       interval: 30s
@@ -69,9 +73,6 @@ services:
       - openmrs-network
     expose:
       - "80"
-    volumes:
-      - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
-
   frontend:
       image: thevo/lafia-openmrs-frontend:alpha-dev
       platform: linux/amd64
