--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -1,6 +1,33 @@
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+    server_name lafiahms.lafialink-dev.com;
+    
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name lafiahms.lafialink-dev.com;
+
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+
+    # Modern SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # HSTS (uncomment if you're sure)
+    # add_header Strict-Transport-Security "max-age=63072000" always;
+
+    client_max_body_size 50M;
 
     # Frontend SPA
     location /openmrs/spa {
@@ -15,6 +42,12 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
         add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+
+        # Handle SPA routing
+        try_files $uri $uri/ /openmrs/spa/index.html;
     }
 
     # Backend API
@@ -25,18 +58,36 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+
         # CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
         add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
+    }
 
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
+    # Handle OPTIONS method
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
     }
 
     # Root redirect to SPA
     location / {
         return 301 /openmrs/spa/;
+    }
+
+    # Favicon and static files
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
     }
 }
