--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,68 +1,24 @@
 services:
- 
-  nginx-proxy:
-      image: nginxproxy/nginx-proxy
-      container_name: nginx-proxy
-      restart: unless-stopped
-      ports:
-        - "80:80"
-        - "443:443"
-      volumes:
-        - /var/run/docker.sock:/tmp/docker.sock:ro
-        - certs:/etc/nginx/certs:ro
-        - vhost:/etc/nginx/vhost.d
-        - html:/usr/share/nginx/html
-        - nginx_conf:/etc/nginx/conf.d
-      environment:
-        - DEFAULT_HOST=${HMS_DEV_DOMAIN_NAME}
-        - TRUST_DOWNSTREAM_PROXY=false
-        - ENABLE_IPV6=true
-        - VIRTUAL_PORT=80
-        - VIRTUAL_PROTO=http
-      networks:
-        - openmrs-network
-  acme-companion:
-    image: nginxproxy/acme-companion
-    container_name: nginx-proxy-acme
-    restart: unless-stopped
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - certs:/etc/nginx/certs:rw
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - acme:/etc/acme.sh
-    environment:
-      - DEFAULT_EMAIL=${HMS_DEV_SSL_EMAIL}
-      - NGINX_PROXY_CONTAINER=nginx-proxy
-    depends_on:
-      - nginx-proxy
-    networks:
-      - openmrs-network
-
   gateway:
     image: thevo/lafia-openmrs-gateway:dev
     platform: linux/amd64
     restart: unless-stopped
     depends_on:
-      nginx-proxy:
-        condition: service_started
-      acme-companion:
-        condition: service_started
       frontend:
         condition: service_healthy
       backend:
         condition: service_started
+    ports:
+      - "80:80"
+      - "443:443"
     environment:
-      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
       - VIRTUAL_PORT=80
-      - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - PROXY_READ_TIMEOUT=300
       - PROXY_CONNECT_TIMEOUT=300
       - PROXY_ADD_CORS_HEADERS=true
     volumes:
       - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
+      - ./config/ssl:/etc/nginx/ssl:ro
     healthcheck:
       test: ["CMD", "nginx", "-t"]
       interval: 30s
@@ -71,46 +27,34 @@ services:
       start_period: 40s
     networks:
       - openmrs-network
+  frontend:
+    image: thevo/lafia-openmrs-frontend:dev
+    platform: linux/amd64
+    restart: unless-stopped
+    depends_on:
+      - backend
+    environment:
+      - SPA_PATH=/openmrs/spa
+      - API_URL=/openmrs
+      - PUBLIC_URL=/openmrs/spa
+      - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
+      - SPA_DEFAULT_LOCALE=
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 0
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - openmrs-network
     expose:
       - "80"
-  frontend:
-      image: thevo/lafia-openmrs-frontend:alpha-dev
-      platform: linux/amd64
-      restart: unless-stopped
-      environment:
-        - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
-        - VIRTUAL_PORT=80
-        - VIRTUAL_PROTO=http
-        - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-        - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
-        - SPA_PATH=/openmrs/spa
-        - API_URL=/openmrs
-        - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
-        - SPA_DEFAULT_LOCALE=
-      healthcheck:
-        test: wget --no-verbose --tries=1 --spider http://localhost:80/ 
-        interval: 30s
-        timeout: 10s
-        retries: 3
-        start_period: 40s
-      networks:
-        - openmrs-network
-      expose:
-        - "80"
-      volumes:
-        - frontend-dist:/usr/share/nginx/html
-        - ./config/nginx/frontend.conf:/etc/nginx/conf.d/default.conf
 
   backend:
     image: ${ECR_REPOSITORY:-571600871041.dkr.ecr.eu-west-2.amazonaws.com}/lafiaopenmrs-core-backend:latest
     platform: linux/amd64
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=${HMS_DEV_DOMAIN_NAME}
-      - VIRTUAL_PORT=8080
-      - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=${HMS_DEV_DOMAIN_NAME}
-      - LETSENCRYPT_EMAIL=${HMS_DEV_SSL_EMAIL}
       - OMRS_CONFIG_MODULE_WEB_ADMIN=true
       - OMRS_CONFIG_AUTO_UPDATE_DATABASE=true
       - OMRS_CONFIG_CREATE_TABLES=true
@@ -148,15 +92,3 @@ networks:
 
 volumes:
   openmrs-data: ~
-  certs:
-    name: openmrs_certs
-  vhost:
-    name: openmrs_vhost
-  html:
-    name: openmrs_html
-  acme:
-    name: openmrs_acme
-  nginx_conf:
-    name: openmrs_nginx_conf
-  frontend-dist:  
-    name: openmrs_frontend_dist
