--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,44 +1,58 @@
 services:
   gateway:
-      image: thevo/lafia-openmrs-gateway:dev
-      platform: linux/amd64
-      restart: unless-stopped
-      depends_on:
-        frontend:
-          condition: service_healthy
-        backend:
-          condition: service_started
-      ports:
-        - "80:80"
-        - "443:443"
-      environment:
-        - NGINX_ENVSUBST_TEMPLATE_SUFFIX=.template
-        - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx/conf.d
-      volumes:
-        - ./config/nginx/templates:/etc/nginx/templates
-        - ./config/ssl:/etc/nginx/ssl:ro
-      healthcheck:
-        test: ["CMD", "nginx", "-t"]
-        interval: 30s
-        timeout: 10s
-        retries: 3
-        start_period: 40s
-      networks:
-        - openmrs-network
-        - backend
+    image: thevo/lafia-openmrs-gateway:dev
+    platform: linux/amd64
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
+      - ./config/ssl:/etc/nginx/ssl:ro
+    networks:
+      - default
+    depends_on:
+      - frontend
+      - backend
 
   frontend:
     image: thevo/lafia-openmrs-frontend:dev
     platform: linux/amd64
+    restart: unless-stopped
     environment:
       - SPA_PATH=/openmrs/spa
       - API_URL=/openmrs
+      - PUBLIC_URL=/openmrs/spa
+    networks:
+      - default
+    expose:
+      - "80"
 
   backend:
-    image: ${ECR_REPOSITORY}/lafiaopenmrs-core-backend:latest
+    image: 571600871041.dkr.ecr.eu-west-2.amazonaws.com/lafiaopenmrs-core-backend:latest
     platform: linux/amd64
+    restart: unless-stopped
     environment:
+      - OMRS_CONFIG_MODULE_WEB_ADMIN=true
+      - OMRS_CONFIG_AUTO_UPDATE_DATABASE=true
+      - OMRS_CONFIG_CREATE_TABLES=true
       - OMRS_CONFIG_CONNECTION_SERVER=${HMS_DEV_DB_HOST}
       - OMRS_CONFIG_CONNECTION_DATABASE=${HMS_DEV_DB_NAME}
       - OMRS_CONFIG_CONNECTION_USERNAME=${HMS_DEV_DB_USER}
       - OMRS_CONFIG_CONNECTION_PASSWORD=${HMS_DEV_DB_PASSWORD}
+      - OMRS_CONFIG_CONNECTION_PORT=5432
+      - OMRS_DB_DRIVER_CLASS=org.postgresql.Driver
+      - OMRS_CONFIG_CONNECTION_URL=jdbc:postgresql://${HMS_DEV_DB_HOST}:5432/${HMS_DEV_DB_NAME}
+      - CORS_ALLOWED_ORIGINS=*
+      - CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+      - CORS_ALLOWED_HEADERS=Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN
+      - CORS_ALLOW_CREDENTIALS=true
+    networks:
+      - default
+    expose:
+      - "8080"
+    volumes:
+      - openmrs-data:/openmrs/data
+
+volumes:
+  openmrs-data: ~
