--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -1,3 +1,8 @@
+map $request_method $cors_method {
+    OPTIONS 'true';
+    default 'false';
+}
+
 server {
     listen 80;
     server_name lafiahms.lafialink-dev.com;
@@ -11,6 +16,17 @@ server {
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
+# Common CORS headers for all locations
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, HEAD, PATCH' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN,Cache-Control,Accept' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    # Handle preflight requests
+    if ($cors_method = 'true') {
+        return 204;
+    }
+
     location /openmrs/spa {
         proxy_pass http://frontend:80;
         proxy_set_header Host $host;
@@ -18,11 +34,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN' always;
-        
-        try_files $uri $uri/ /openmrs/spa/index.html;
+        # Location-specific CORS if needed
+        add_header 'Access-Control-Max-Age' 3600 always;
     }
 
     location /openmrs {
@@ -31,6 +44,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
     }
