--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -1,3 +1,4 @@
+# Common CORS headers
 map $request_method $cors_method {
     OPTIONS 'true';
     default 'false';
@@ -16,14 +17,15 @@ server {
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-# Common CORS headers for all locations
+    # Common CORS headers for all locations
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, HEAD, PATCH' always;
     add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN,Cache-Control,Accept' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
+    add_header 'Access-Control-Max-Age' '3600' always;
 
     # Handle preflight requests
-    if ($cors_method = 'true') {
+    if ($request_method = 'OPTIONS') {
         return 204;
     }
 
@@ -33,9 +35,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Location-specific CORS if needed
-        add_header 'Access-Control-Max-Age' 3600 always;
+
+        try_files $uri $uri/ /openmrs/spa/index.html;
     }
 
     location /openmrs {
@@ -44,9 +45,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
+    }
+
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
     }
 
     location / {
