--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,10 +9,8 @@ services:
       - ./config/nginx/gateway.conf:/etc/nginx/conf.d/default.conf
       - ./config/ssl:/etc/nginx/ssl:ro
     depends_on:
-      frontend:
-        condition: service_healthy
-      backend:
-        condition: service_healthy
+      - frontend
+      - backend
     restart: unless-stopped
 
   frontend:
@@ -58,7 +56,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s
+      start_period: 120s
     volumes:
       - openmrs-data:/openmrs/data
     restart: unless-stopped
