--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -1,33 +1,22 @@
-# Common CORS headers
-map $request_method $cors_method {
-    OPTIONS 'true';
-    default 'false';
-}
-
+# Remove any MIME type definitions to avoid duplicates
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name lafiahms.lafialink-dev.com;
     return 301 https://$server_name$request_uri;
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
     server_name lafiahms.lafialink-dev.com;
 
+    # SSL Configuration
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-    # Common CORS headers for all locations
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, HEAD, PATCH' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN,Cache-Control,Accept' always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
-    add_header 'Access-Control-Max-Age' '3600' always;
-
-    # Handle preflight requests
-    if ($request_method = 'OPTIONS') {
-        return 204;
-    }
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers off;
 
     location /openmrs/spa {
         proxy_pass http://frontend:80;
@@ -35,8 +24,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        try_files $uri $uri/ /openmrs/spa/index.html;
     }
 
     location /openmrs {
@@ -45,17 +32,16 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-    }
-
-    location = /favicon.ico {
-        access_log off;
-        log_not_found off;
     }
 
     location / {
         return 301 /openmrs/spa/;
+    }
+
+    # Handle favicon and other static files
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+        return 404;
     }
 }
