--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,13 +23,15 @@ services:
       - SPA_CONFIG_URLS=/openmrs/spa/config-core_demo.json
       - SPA_DEFAULT_LOCALE=""
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost/ || exit 0
+      test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 0
       interval: 30s
       timeout: 10s
       retries: 3
     restart: unless-stopped
     depends_on:
       - backend
+    expose:
+      - "80"
 
   backend:
     image: 571600871041.dkr.ecr.eu-west-2.amazonaws.com/lafiaopenmrs-core-backend:latest
@@ -46,23 +48,22 @@ services:
       - OMRS_DB_DRIVER_CLASS=org.postgresql.Driver
       - OMRS_CONFIG_CONNECTION_URL=jdbc:postgresql://${HMS_DEV_DB_HOST}:5432/${HMS_DEV_DB_NAME}
       - OMRS_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
-      - OMRS_CONFIG_ENFORCE_TENANT_ISOLATION=true
-      - OMRS_CONFIG_TENANT_SCHEMA_VALIDATION=true
       # CORS Configuration
       - CORS_ALLOWED_ORIGINS=*
       - CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS,HEAD,PATCH
       - CORS_ALLOWED_HEADERS=Authorization,Content-Type,X-Requested-With,X-XSRF-TOKEN
       - CORS_ALLOW_CREDENTIALS=true
-      
-
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/openmrs || exit 0"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 120s
+    expose:
+      - "8080"
     volumes:
       - openmrs-data:/openmrs/data
     restart: unless-stopped
+
 volumes:
   openmrs-data: ~
