--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -2,14 +2,14 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    server_name lafiahms.lafialink-dev.com;
+    server_name lafiahms-dev.lafialink-dev.com;
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
-    server_name lafiahms.lafialink-dev.com;
+    server_name lafiahms-dev.lafialink-dev.com;
 
     # SSL Configuration
     ssl_certificate /etc/nginx/ssl/cert.pem;
