SPA PATH Update

--- a/config/nginx/gateway.conf
+++ b/config/nginx/gateway.conf
@@ -17,12 +17,14 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers off;
 
-    location /openmrs/spa {
-        proxy_pass http://frontend:80;
+    location /openmrs/spa/ {
+        proxy_pass http://frontend:80/;
+        proxy_pass http://frontend:80/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
     }
 
     location /openmrs {
